added CREATE and DELETE functionality.

--- a/N01426963_passionproject/N01426963_passionproject.csproj
+++ b/N01426963_passionproject/N01426963_passionproject.csproj
@@ -206,6 +206,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\SampleDirection.cs" />
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
+    <Compile Include="Controllers\CompController.cs" />
     <Compile Include="Controllers\CompDataController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
@@ -213,9 +214,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Comps.cs" />
+    <Compile Include="Models\Comp.cs" />
     <Compile Include="Models\WoWDBContext.cs" />
-    <Compile Include="Models\Classes.cs" />
+    <Compile Include="Models\Class.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -268,10 +269,13 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\Comp\New.cshtml" />
+    <Content Include="Views\Comp\Show.cshtml" />
+    <Content Include="Views\Comp\List.cshtml" />
+    <Content Include="Views\Comp\DeleteConfirm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\WoWData\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
